<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    tools:context=".login.ForgetPassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:scaleType="fitXY"
        android:src="@mipmap/backgroun_image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="130dp"
                    android:text="@string/login"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="130dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/purple_500"
                    android:textSize="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hello"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login"
                    android:text="@string/hello_nice"
                    android:layout_marginTop="80dp"
                    android:textSize="12dp"
                    android:textColor="@color/toolbar"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hello"
                    android:text="@string/forget_password"
                    android:textColor="#242424"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_Email"
                    android:layout_below="@id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    style="@style/OutlineBox"
                    android:layout_margin="20dp">
                    <EditText
                        android:id="@+id/enter_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:drawableLeft="@drawable/ic_user_name"
                        android:textCursorDrawable="@null"
                        android:drawablePadding="10dp"
                        android:drawableTint="@android:color/darker_gray"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/next1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@id/text_Email"
                    android:text="@string/next"
                    android:background="@drawable/rounded_button"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>