<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    tools:context=".signup.Referral_code"
    android:id="@+id/referral_layout"
   >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/backgroun_image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="130dp"
                    android:text="@string/login"
                    android:onClick="referral_login"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="130dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/purple_500"
                    android:textSize="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hello"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_below="@id/login"
                    android:text="@string/hello_nice"
                    android:layout_marginTop="80dp"
                    android:textSize="12dp"

                    android:textColor="@color/toolbar"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hello"
                    android:text="@string/enter_referral"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/toolbar"
                    android:layout_marginLeft="20dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user"
                    android:layout_below="@id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleTint="@android:color/darker_gray"
                    android:hint="@string/your_referral"
                    style="@style/OutlineBox"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">
                    <EditText
                        android:id="@+id/referral_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="@color/toolbar"
                        android:inputType="text"
                        android:drawableLeft="@drawable/ic_pay"
                        android:drawablePadding="10dp"
                        android:drawableTint="@android:color/darker_gray"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/referral_ready"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/user"
                    android:text="@string/ready"
                    android:background="@drawable/rounded_button"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_margin="20dp"/>


            </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>