<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Payment.Top_up_Money"
    android:background="@color/white1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/toolbar"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_gravity="center"
            android:text="@string/add_money"
            android:textColor="@color/white"
            android:id="@+id/toolbar_title" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="5dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:cardBackgroundColor="@color/card_background">
        <EditText
            android:id="@+id/enter_add_money_amont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add"
            android:background="@null"
            android:textAlignment="center"
            android:inputType="number"
            android:textSize="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/toolbar_text_color"/>
    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/add_money"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="4dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="80dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        app:cardBackgroundColor="@color/purple_500">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/toolbar_text_color"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>